--- a/src/prototype/Fortran 1D/Makefile
+++ b/src/prototype/Fortran 1D/Makefile
@@ -14,5 +14,8 @@ all : procedures.f90 transport.f90
 test : procedures.f90 test.f90
 	$(FC) $(FFLAGS) procedures.f90 test.f90
 
+new : procedures.f90 new.f90
+	$(FC) $(FFLAGS) procedures.f90 new.f90 -o new
+
 clean : 
 	rm *.out *.o *.mod $(EXEC) 
